<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="scenarios_title">Пациенты</string>
    <string name="set_calling">Назначить обзвон</string>
    <string name="this_scenario_assigned_to_dialings">Этот сценарий прикреплен к обзваниваниям:</string>
    <string name="patent_pill_schedule">Статистика приема медикаментов</string>
    <string name="give_invite_code">Сообщите пациенту и его законному представителю их коды приглашения</string>
    <string name="patient_code">Код пациента</string>
    <string name="code_parent">Код законного представителя</string>
    <string name="close_codes_disclaimer">Внимание! Перед тем, как закрыть экран, убедитесь, что коды переданы пациентам</string>
    <string name="patient_invitation">Приглашение пациента</string>
    <string name="patient_name">Имя пациента</string>
    <string name="patient_15_years_reached">Пациенту исполнилось 15 лет</string>
    <string name="legal_representative_name">Имя законного представителя</string>
    <string name="select_existing">Выбрать существующего</string>
    <string name="lagal_representatives">Законные представители</string>
    <string name="patient_cards_in_develop">Раздел "Карточки пациента" в разработке</string>
    <string name="patient_new_registration_title">Новый пациент зарегистрирован</string>
    <string name="patient_new_registration_message">Пациент %s активировал код приглашения</string>
    <string name="patient_update_notifications">Пациент %s обновил напоминания о приеме</string>
    <string name="look">Посмотреть</string>
</resources>